--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <ul>
 <li>艦これの画面から目を離していても、ゲーム進行状況をすべて把握することが目的です。</li>
 <li>遠征終了時刻や任務遂行状況を記録し、メモがわりに使えるようにします。</li>
-<li>各艦毎の攻撃種別・使用装備・与ダメージを戦闘詳報として記録し、攻撃力解析に使えるようにします。</li>
+<li>各艦毎の攻撃種別・使用装備・与ダメージを戦闘詳報として記録し、攻撃力検証に使えるようにします。</li>
 </ul>
 
 <h2>
@@ -68,11 +68,14 @@
 </ul>
 </li>
 <li>Google Chromeで艦これにログインすると、画面右側に「艦これ余所見プレイ支援」と表示されます。</li>
-<li>母港画面では、画面右側に「艦娘保有数、装備保有数、改造改修可能艦数、修理中、建造中、任務遂行数、艦隊１～４」の各メニューが表示されます。</li>
+<li>母港画面では、画面右側に「資材増減数、艦娘保有数、装備保有数、改造/近代化改修可能艦数、キラ付艦数、修理中、建造中、任務遂行数、艦隊１～４」の各メニューが表示されます。</li>
 <li>メニューの[+]ボタンをクリックすると詳細が表示されます。</li>
 <li>艦隊１～４の Cond 値は49が平常で50以上がキラキラです。53以上が二重キラ、85以上が三重キラです。</li>
 <li>あ号任務についてはその内訳（出撃数、ボス勝利、ボス到達、S勝利）を表示します。</li>
-<li>戦闘画面では、画面右側に敵味方艦隊のダメージ(撃沈、大破、中破、小破)と戦果を表示します。</li>
+<li>ドラム缶装備の待機艦（遠征交代要員）をCond値別に一覧表示します。</li>
+<li>羅針盤画面では次戦闘マスにて過去に遭遇した敵編成の一覧を表示します。</li>
+<li>戦闘画面では、画面右側に敵味方艦隊のダメージ(撃沈、大破、中破、小破)と戦果を表示し、大破進撃を警告します。</li>
+<li>遠征、演習、入渠時には任務受諾状況を表示し、任務チェック漏れを警告します。</li>
 <li>遠征結果、道中資源、任務達成、入渠、工廠による資材増減を記録して表示します。</li>
 <li>画面最上部の「全閉」ボタンはメニューをすべて閉じます。</li>
 <li>画面最上部の「←」「→」ボタンは表示内容を履歴参照します。</li>
@@ -112,6 +115,31 @@
 <a id="修理中入渠要修理艦一覧サンプル" class="anchor" href="#%E4%BF%AE%E7%90%86%E4%B8%AD%E5%85%A5%E6%B8%A0%E8%A6%81%E4%BF%AE%E7%90%86%E8%89%A6%E4%B8%80%E8%A6%A7%E3%82%B5%E3%83%B3%E3%83%97%E3%83%AB" aria-hidden="true"><span class="octicon octicon-link"></span></a>修理中(入渠)、要修理艦一覧サンプル</h3>
 
 <p><img src="http://hkuno9000.github.io/KanColle-YPS/images/YPS-repair-list.png" alt="kaizou screenshot"></p>
+
+<h3>
+<a id="未ロック未保有ダブリ艦一覧サンプル" class="anchor" href="#%E6%9C%AA%E3%83%AD%E3%83%83%E3%82%AF%E6%9C%AA%E4%BF%9D%E6%9C%89%E3%83%80%E3%83%96%E3%83%AA%E8%89%A6%E4%B8%80%E8%A6%A7%E3%82%B5%E3%83%B3%E3%83%97%E3%83%AB" aria-hidden="true"><span class="octicon octicon-link"></span></a>未ロック、未保有、ダブリ艦一覧サンプル</h3>
+
+<p><img src="http://hkuno9000.github.io/KanColle-YPS/images/YPS-unlock-unown-double.png" alt="unlock unown double screenshot"></p>
+
+<h3>
+<a id="次戦闘マス敵遭遇回数記録サンプル" class="anchor" href="#%E6%AC%A1%E6%88%A6%E9%97%98%E3%83%9E%E3%82%B9%E6%95%B5%E9%81%AD%E9%81%87%E5%9B%9E%E6%95%B0%E8%A8%98%E9%8C%B2%E3%82%B5%E3%83%B3%E3%83%97%E3%83%AB" aria-hidden="true"><span class="octicon octicon-link"></span></a>次戦闘マス敵遭遇回数記録サンプル</h3>
+
+<p><img src="http://hkuno9000.github.io/KanColle-YPS/images/YPS-next-enemy-count.png" alt="next enemy count screenshot"></p>
+
+<h3>
+<a id="遠征交代要員一覧サンプル" class="anchor" href="#%E9%81%A0%E5%BE%81%E4%BA%A4%E4%BB%A3%E8%A6%81%E5%93%A1%E4%B8%80%E8%A6%A7%E3%82%B5%E3%83%B3%E3%83%97%E3%83%AB" aria-hidden="true"><span class="octicon octicon-link"></span></a>遠征交代要員一覧サンプル</h3>
+
+<p><img src="http://hkuno9000.github.io/KanColle-YPS/images/YPS-kira-standby.png" alt="kira standby screenshot"></p>
+
+<h3>
+<a id="演習任務チェックサンプル" class="anchor" href="#%E6%BC%94%E7%BF%92%E4%BB%BB%E5%8B%99%E3%83%81%E3%82%A7%E3%83%83%E3%82%AF%E3%82%B5%E3%83%B3%E3%83%97%E3%83%AB" aria-hidden="true"><span class="octicon octicon-link"></span></a>演習任務チェックサンプル</h3>
+
+<p><img src="http://hkuno9000.github.io/KanColle-YPS/images/YPS-practice-quest-check.png" alt="practice quest check screenshot"></p>
+
+<h3>
+<a id="遠征任務チェックサンプル" class="anchor" href="#%E9%81%A0%E5%BE%81%E4%BB%BB%E5%8B%99%E3%83%81%E3%82%A7%E3%83%83%E3%82%AF%E3%82%B5%E3%83%B3%E3%83%97%E3%83%AB" aria-hidden="true"><span class="octicon octicon-link"></span></a>遠征任務チェックサンプル</h3>
+
+<p><img src="http://hkuno9000.github.io/KanColle-YPS/images/YPS-mission-quest-check.png" alt="practice quest check screenshot"></p>
 
 <h2>
 <a id="注意事項" class="anchor" href="#%E6%B3%A8%E6%84%8F%E4%BA%8B%E9%A0%85" aria-hidden="true"><span class="octicon octicon-link"></span></a>注意事項</h2>
