--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <ul>
 <li>艦これの画面から目を離していても、ゲーム進行状況をすべて把握することが目的です。</li>
 <li>遠征終了時刻や任務遂行状況を記録し、メモがわりに使えるようにします。</li>
+<li>大破進撃を検出して警告します。</li>
 <li>各艦毎の攻撃種別・使用装備・与ダメージを戦闘詳報として記録し、攻撃力検証に使えるようにします。</li>
 <li>キラ付け、近代化改修、装備改修、熟練度など、ロックした艦と装備の全内容を一覧表示します。</li>
 </ul>
@@ -81,8 +82,8 @@
 <li>艦隊１～４の Cond 値は49が平常で50以上がキラキラです。53以上が二重キラ、85以上が三重キラです。</li>
 <li>あ号任務についてはその内訳（出撃数、ボス勝利、ボス到達、S勝利）を表示します。</li>
 <li>ドラム缶装備の待機艦（遠征交代要員）をCond値別に一覧表示します。</li>
-<li>羅針盤画面では次戦闘マスにて過去に遭遇した敵編成の一覧を表示します。</li>
-<li>戦闘画面では、画面右側に敵味方艦隊のダメージ(撃沈、大破、中破、小破)と戦果を表示し、大破進撃を警告します。</li>
+<li>羅針盤・陣形選択画面では次戦闘マスにて過去に遭遇した敵編成の一覧を表示します。大破進撃ならば警告します。</li>
+<li>戦闘画面では、画面右側に敵味方艦隊のダメージ(撃沈、大破、中破、小破)と戦果を表示します。</li>
 <li>遠征、演習、入渠時には任務受諾状況を表示し、任務チェック漏れを警告します。</li>
 <li>遠征結果、道中資源、任務達成、入渠、工廠による資材増減を記録して表示します。週間収支(月曜5:00AM以降の増減)と今回収支(ログイン以降の増減)も表示します。</li>
 <li>gooleアカウントの同期機能を利用して、週間収支とあ号任務の進捗内訳をPC間で同期します。(右肩の三本線→設定→ログイン同期の詳細設定　にてアプリと拡張機能にチェックを入れる)</li>
@@ -104,6 +105,11 @@
 <a id="戦闘詳報サンプル" class="anchor" href="#%E6%88%A6%E9%97%98%E8%A9%B3%E5%A0%B1%E3%82%B5%E3%83%B3%E3%83%97%E3%83%AB" aria-hidden="true"><span class="octicon octicon-link"></span></a>戦闘詳報サンプル</h3>
 
 <p><img src="http://hkuno9000.github.io/KanColle-YPS/images/YPS-battle-detail.png" alt="battle screenshot"></p>
+
+<h3>
+<a id="羅針盤画面の大破進撃警告サンプル" class="anchor" href="#%E7%BE%85%E9%87%9D%E7%9B%A4%E7%94%BB%E9%9D%A2%E3%81%AE%E5%A4%A7%E7%A0%B4%E9%80%B2%E6%92%83%E8%AD%A6%E5%91%8A%E3%82%B5%E3%83%B3%E3%83%97%E3%83%AB" aria-hidden="true"><span class="octicon octicon-link"></span></a>羅針盤画面の大破進撃警告サンプル</h3>
+
+<p><img src="http://hkuno9000.github.io/KanColle-YPS/images/YPS-next-damage-alert.png" alt="battle screenshot"></p>
 
 <h3>
 <a id="帰港画面サンプル" class="anchor" href="#%E5%B8%B0%E6%B8%AF%E7%94%BB%E9%9D%A2%E3%82%B5%E3%83%B3%E3%83%97%E3%83%AB" aria-hidden="true"><span class="octicon octicon-link"></span></a>帰港画面サンプル</h3>
