--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <a id="艦これ余所見プレイ支援-kancolleyps" class="anchor" href="#%E8%89%A6%E3%81%93%E3%82%8C%E4%BD%99%E6%89%80%E8%A6%8B%E3%83%97%E3%83%AC%E3%82%A4%E6%94%AF%E6%8F%B4-kancolleyps" aria-hidden="true"><span class="octicon octicon-link"></span></a>艦これ余所見プレイ支援 KanColleYPS</h1>
 
 <ul>
+<li>v1.0 Dec.2015</li>
 <li>開発サイト: <a href="https://github.com/hkuno9000/KanColle-YPS">https://github.com/hkuno9000/KanColle-YPS</a>
 </li>
 <li>公開サイト: <a href="http://hkuno9000.github.io/KanColle-YPS">http://hkuno9000.github.io/KanColle-YPS</a>
@@ -170,7 +171,7 @@
 <a id="注意事項" class="anchor" href="#%E6%B3%A8%E6%84%8F%E4%BA%8B%E9%A0%85" aria-hidden="true"><span class="octicon octicon-link"></span></a>注意事項</h2>
 
 <ul>
-<li>修復要員、修復女神の装備表示は、修復発動後の変動に対応していない可能性があるので、表示を鵜呑みにすると危険です。大破進撃は自己責任でお願いします。</li>
+<li>大破進撃は自己責任でお願いします。</li>
 <li>戦闘後のドロップ艦が持ってきた装備の数は、母港帰還までカウントできない場合があります。</li>
 </ul>
 
