--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <a id="艦これ余所見プレイ支援-kancolleyps" class="anchor" href="#%E8%89%A6%E3%81%93%E3%82%8C%E4%BD%99%E6%89%80%E8%A6%8B%E3%83%97%E3%83%AC%E3%82%A4%E6%94%AF%E6%8F%B4-kancolleyps" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>艦これ余所見プレイ支援 KanColleYPS</h1>
 
 <ul>
-<li>v1.1 Feb.2016: 2016冬イベント空襲戦マス対応</li>
+<li>v1.2 Mar.2016: 敵装備、遠征情報強化版</li>
 <li>開発サイト: <a href="https://github.com/hkuno9000/KanColle-YPS">https://github.com/hkuno9000/KanColle-YPS</a>
 </li>
 <li>公開サイト: <a href="http://hkuno9000.github.io/KanColle-YPS">http://hkuno9000.github.io/KanColle-YPS</a>
@@ -50,8 +50,7 @@
 
 <ol>
 <li>ソースコード一式のZIPファイルをダウンロードし、適当なフォルダへ展開する</li>
-<li>または git clone <a href="https://github.com/hkuno9000/KanColle-YPS.git%E3%80%80%E3%81%A7%E3%83%95%E3%82%A9%E3%83%AB%E3%83%80%E3%81%B8%E5%B1%95%E9%96%8B%E3%81%99%E3%82%8B">https://github.com/hkuno9000/KanColle-YPS.git　でフォルダへ展開する</a>
-</li>
+<li>または <code>git clone https://github.com/hkuno9000/KanColle-YPS.git</code>　でフォルダへ展開する</li>
 <li>Google Chromeの拡張機能設定ページを開く(右肩の三本線→設定→左列の拡張機能)</li>
 <li>【デベロッパー モード】にチェックを入れる</li>
 <li>【パッケージ化されていない拡張機能を読み込む】ボタンを押して、ソース展開したフォルダを指定する(これで拡張機能がインストールされる)</li>
@@ -61,7 +60,7 @@
 <a id="バージョンアップ方法" class="anchor" href="#%E3%83%90%E3%83%BC%E3%82%B8%E3%83%A7%E3%83%B3%E3%82%A2%E3%83%83%E3%83%97%E6%96%B9%E6%B3%95" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>バージョンアップ方法</h2>
 
 <ol>
-<li>ソース展開フォルダへZIPファイルの中身を上書き(または git pull)して、Chromeを再起動する.</li>
+<li>ソース展開フォルダへZIPファイルの中身を上書き(または <code>git pull</code>)して、Chromeを再起動する.</li>
 </ol>
 
 <h2>
