--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <a id="艦これ余所見プレイ支援-kancolleyps" class="anchor" href="#%E8%89%A6%E3%81%93%E3%82%8C%E4%BD%99%E6%89%80%E8%A6%8B%E3%83%97%E3%83%AC%E3%82%A4%E6%94%AF%E6%8F%B4-kancolleyps" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>艦これ余所見プレイ支援 KanColleYPS</h1>
 
 <ul>
-<li>v1.2 Mar.2016: 敵装備、遠征情報強化版</li>
+<li>v1.3 Apr.2016: 2016/4/1メンテ対応、permission不足対応.</li>
 <li>開発サイト: <a href="https://github.com/hkuno9000/KanColle-YPS">https://github.com/hkuno9000/KanColle-YPS</a>
 </li>
 <li>公開サイト: <a href="http://hkuno9000.github.io/KanColle-YPS">http://hkuno9000.github.io/KanColle-YPS</a>
